--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Theme.MovieApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.MovieApp" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -18,5 +18,13 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:fontFamily">@font/urbanist_700</item>
+    </style>
+
+    <style name="ThemeEditText">
+        <item name="android:background">@drawable/bg_edit</item>
+        <item name="android:textColor">#212121</item>
+        <item name="android:padding">16dp</item>
+        <item name="android:fontFamily">@font/urbanist_600</item>
+        <item name="android:textColorHint">#9E9E9E</item>
     </style>
 </resources>
