--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -51,6 +51,8 @@
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="24dp"
            style="@style/ThemeEditText"
+           android:drawableStart="@drawable/ic_email"
+           android:drawablePadding="12dp"
            android:inputType="textEmailAddress"
            android:hint="@string/text_hint_edit_email_register_fragment"
            app:layout_constraintStart_toStartOf="parent"
@@ -66,6 +68,8 @@
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="24dp"
            style="@style/ThemeEditText"
+           android:drawableStart="@drawable/ic_password"
+           android:drawablePadding="12dp"
            android:inputType="textPassword"
            android:hint="@string/text_hint_edit_password_register_fragment"
            app:layout_constraintStart_toStartOf="parent"
@@ -87,6 +91,22 @@
            app:layout_constraintTop_toBottomOf="@id/edit_password"
            app:layout_constraintHorizontal_bias="0.5" />
 
+       <ImageView
+           android:id="@+id/progress_loading"
+           android:layout_width="50dp"
+           android:layout_height="50dp"
+           android:layout_marginTop="16dp"
+           android:layout_marginBottom="32dp"
+           android:visibility="invisible"
+           tools:src="@drawable/loading"
+           tools:visibility="visible"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintTop_toBottomOf="@id/button_sign_up"
+           app:layout_constraintBottom_toBottomOf="parent"
+           app:layout_constraintVertical_bias="0.0"
+           tools:ignore="ContentDescription" />
+
        <LinearLayout
            android:id="@+id/linear_layout_continue_social_network"
            android:layout_width="match_parent"
@@ -97,7 +117,7 @@
            android:layout_marginHorizontal="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
-           app:layout_constraintTop_toBottomOf="@id/button_sign_up"
+           app:layout_constraintTop_toBottomOf="@id/progress_loading"
            >
 
            <View
