--- a/app/src/main/res/layout/fragment_forgot.xml
+++ b/app/src/main/res/layout/fragment_forgot.xml
@@ -60,7 +60,7 @@
             android:importantForAutofill="no" />
 
         <Button
-            android:id="@+id/button_sign_up"
+            android:id="@+id/button_forgot"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -82,7 +82,7 @@
             tools:visibility="visible"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/button_sign_up"
+            app:layout_constraintTop_toBottomOf="@id/button_forgot"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias="0.0"
             tools:ignore="ContentDescription" />
