--- a/app/src/main/res/layout/fragment_home_auth.xml
+++ b/app/src/main/res/layout/fragment_home_auth.xml
@@ -136,7 +136,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/button_with_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/button_sign_in_with_password_home_auth_fragment"
@@ -156,7 +156,7 @@
             android:layout_marginVertical="32dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button"
+            app:layout_constraintTop_toBottomOf="@+id/button_with_password"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.5">
 
@@ -168,6 +168,7 @@
                 android:text="@string/text_dont_have_an_account_home_auth_fragment" />
 
             <TextView
+                android:id="@+id/button_register"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
